[package]
edition = "2024"

name = "puccini-cli"
description = "Puccini TOSCA and CSAR CLI utilities"
version = "0.0.4"
rust-version = "1.91"

license = "MIT OR Apache-2.0"
repository = "https://github.com/tliron/puccini"
documentation = "https://puccini.cloud"
authors = ["Tal Liron"]

readme = "../README.md"

categories = [] # https://crates.io/category_slugs
keywords = [
    "cloud",
    "orchestration",
    "wasm",
    "tosca",
    "khutulun",
]

[build-dependencies]
# bindeps:
# https://doc.rust-lang.org/nightly/cargo/reference/unstable.html#artifact-dependencies
# puccini-plugin-tosca-2_0-functions = { version = "=0.0.4", artifact = "cdylib", target = "wasm32-wasip2" }
wasmtime = { version = "38.0.4", default-features = false, features = [
    "cranelift",
    "parallel-compilation",
    "pooling-allocator",
    "component-model",
] }

[dependencies]
anstream = "0.6.21"
compris = "=0.0.11"
clap = { version = "4.5.51", features = ["derive"] }
clap-num = "1.2.0"
ctrlc = "3.5.1"
depiction = "=0.0.1"
floria = "=0.0.5"
indicatif = "0.18.3"
kutil = { version = "=0.0.5", features = ["cli", "std", "clap"] }
puccini-csar = { version = "=0.0.4", features = ["creator", "url"] }
puccini-tosca = { version = "=0.0.4", default-features = false, features = ["tosca-2_0"] }
read-url = { version = "=0.0.10", features = ["blocking"] }
thiserror = "2.0.17"
tracing = "0.1.41"

[features]
default = [
    "plugins",
    "filesystem",
    "http",
    "puccini-csar/tarball",
    "puccini-csar/gzip",
    "puccini-csar/zip",
    "puccini-csar/zstandard",
    "with-annotations",
]

plugins = ["floria/plugins", "puccini-tosca/plugins"]
filesystem = ["puccini-tosca/filesystem"]
http = ["puccini-tosca/http"]
with-annotations = []
without-annotations = []

wasm-precompiled = []
wasm-debug-info = ["floria/wasm-debug"]

bindeps = []

## Don't manually enable this!
## It's for situations where we have all features enabled
_blanket = []

[[bin]]
name = "puccini-tosca"
path = "src/puccini-tosca/main.rs"

[[bin]]
name = "puccini-csar"
path = "src/puccini-csar/main.rs"
