[package]
edition = "2024"

name = "puccini-cli"
description = "Puccini TOSCA and CSAR CLI utilities"
version = "0.0.4"
rust-version = "1.93"

license = "MIT OR Apache-2.0"
repository = "https://github.com/tliron/puccini"
documentation = "https://puccini.cloud"
authors = ["Tal Liron"]

readme = "../README.md"

categories = [] # https://crates.io/category_slugs
keywords = [
    "cloud",
    "orchestration",
    "wasm",
    "tosca",
    "khutulun",
]

[build-dependencies]
# bindeps:
# https://doc.rust-lang.org/nightly/cargo/reference/unstable.html#artifact-dependencies
# puccini-plugin-tosca-2_0-functions = { version = "=0.0.4", artifact = "cdylib", target = "wasm32-wasip2" }
floria = "=0.0.5"

[dependencies]
anstream = "1.0.0"
compris = "=0.0.11"
clap = { version = "4.5.58", features = ["derive"] }
clap-num = "1.2.0"
ctrlc = "3.5.2"
depiction = "=0.0.1"
floria = "=0.0.5"
indicatif = "0.18.4"
kutil = { version = "=0.0.5", features = ["cli", "std", "clap"] }
mimalloc = { version = "0.1.48", features = ["v3"] }
problemo = "=0.0.11"
puccini-csar = { version = "=0.0.4", features = ["creator", "url"] }
puccini-tosca = { version = "=0.0.4", default-features = false, features = ["tosca-2_0", "csar"] }
read-url = { version = "=0.0.10", features = ["blocking"] }
tracing = "0.1.44"

[features]
default = [
    "plugins",
    "filesystem",
    "http",
    "puccini-csar/all-formats",
    "with-annotations",
    "without-annotations",
]

plugins = [
    "puccini-tosca/plugins",
    "floria/plugins-http-platform",
    "floria/plugins-tls",
]

filesystem = ["puccini-tosca/filesystem"]
http = ["puccini-tosca/http"]

with-annotations = []
without-annotations = []

wasm-precompiled = []
wasm-debug = ["floria/wasm-debug"]

bindeps = []

## Don't manually enable this!
## It's for situations where we have all features enabled
_blanket = []

[[bin]]
name = "puccini-tosca"
path = "src/puccini-tosca/main.rs"

[[bin]]
name = "puccini-csar"
path = "src/puccini-csar/main.rs"
