[package]
edition = "2024"

name = "puccini-csar"
description = "TOSCA CSAR parser and packager"
version = "0.0.3"
rust-version = "1.90"

license = "MIT OR Apache-2.0"
repository = "https://github.com/tliron/puccini"
documentation = "https://docs.rs/puccini-csar"
authors = ["Tal Liron"]

readme = "../README.md"

categories = [] # https://crates.io/category_slugs
keywords = [
    "cloud",
    "orchestration",
    "wasm",
    "tosca",
    "khutulun",
]

[dependencies]
compris = "=0.0.10"
kutil = { version = "=0.0.2", features = ["cli", "std"] }
thiserror = "2.0.17"
utf8-chars = "3.0.5"

[[example]]
name = "meta"
required-features = ["compris/serde"]

# https://stackoverflow.com/a/61417700
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
