[package]
edition = "2024"

name = "puccini-csar"
description = "TOSCA CSAR parser and packager"
version = "0.0.4"
rust-version = "1.91"

license = "MIT OR Apache-2.0"
repository = "https://github.com/tliron/puccini"
documentation = "https://docs.rs/puccini-csar"
authors = ["Tal Liron"]

readme = "../README.md"

categories = [] # https://crates.io/category_slugs
keywords = [
    "cloud",
    "orchestration",
    "wasm",
    "tosca",
    "khutulun",
]

[dev-dependencies]
anstream = "0.6.21"

[dependencies]
chrono = { optional = true, version = "0.4.42" }
compris = "=0.0.11"
depiction = "=0.0.1"
duplicate = "2.0.1"
flate2 = { optional = true, version = "1.1.5" }
indexmap = "2.12.0"
kutil = { version = "=0.0.5", features = ["std"] }
read-url = { optional = true, version = "=0.0.10", features = ["blocking"] }
thiserror = "2.0.17"
self_cell = { optional = true, version = "1.2.1" }
tar = { optional = true, version = "0.4.44" }
tracing = "0.1.41"
utf8-chars = "3.0.5"
walkdir = "2.5.0"
zip = { optional = true, version = "6.0.0", default-features = false, features = ["deflate-flate2", "chrono"] }
zstd = { optional = true, version = "0.13.3" }

[features]
creator = ["dep:self_cell"]
tarball = ["dep:tar"]
gzip = ["dep:flate2"]
zip = ["dep:zip", "dep:chrono"]
zstandard = ["dep:zstd"]

url = ["dep:read-url"]

[[example]]
name = "csar_meta"
required-features = ["compris/serde"]

# https://stackoverflow.com/a/61417700
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
