[package]
edition = "2024"

name = "puccini-python"
description = "Python bindings for Puccini"
version = "0.0.4"
rust-version = "1.93"

license = "MIT OR Apache-2.0"
repository = "https://github.com/tliron/puccini"
documentation = "https://docs.rs/puccini-tosca"
authors = ["Tal Liron"]

readme = "../README.md"

categories = [] # https://crates.io/category_slugs
keywords = [
    "cloud",
    "orchestration",
    "wasm",
    "tosca",
    "khutulun",
]

[lib]
name = "puccini"
crate-type = ["cdylib"]

[dependencies]
compris = "=0.0.11"
floria = "=0.0.5"
problemo = "=0.0.7"
puccini-csar = { version = "=0.0.4", features = ["creator", "url"] }
puccini-tosca = { version = "=0.0.4", features = ["csar"] }
pyo3 = "0.27.2"
read-url = { version = "=0.0.10", features = ["blocking"] }

[profile.release]
strip = "debuginfo"
lto = true
