[package]
edition = "2024"

name = "puccini-plugin-tosca-2_0-functions"
description = "TOSCA"
version = "0.0.1"
rust-version = "1.90"

license = "MIT OR Apache-2.0"
repository = "https://github.com/tliron/puccini"
documentation = "https://docs.rs/puccini-tosca"
authors = ["Tal Liron"]

readme = "../README.md"

categories = [] # https://crates.io/category_slugs
keywords = [
    "cloud",
    "orchestration",
    "wasm",
    "tosca",
    "khutulun",
]

[dependencies]
base64 = "0.22.1"
chrono = "0.4.42"
floria-plugin-sdk = "=0.0.1"
regex = "1.12.2"
wit-bindgen = "0.46.0"

[lib]
crate-type = ["cdylib"]

# https://stackoverflow.com/a/61417700
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
