[package]
edition = "2024"

name = "puccini-tosca"
description = "TOSCA parser, validator, and Floria compiler"
version = "0.0.4"
rust-version = "1.92"

license = "MIT OR Apache-2.0"
repository = "https://github.com/tliron/puccini"
documentation = "https://docs.rs/puccini-tosca"
authors = ["Tal Liron"]

readme = "../README.md"

categories = [] # https://crates.io/category_slugs
keywords = [
    "cloud",
    "orchestration",
    "wasm",
    "tosca",
    "khutulun",
]

[dependencies]
anstream = "0.6.21"
compris = { version = "=0.0.11", features = ["derive"] }
chrono = "0.4.42"
depiction = { version = "=0.0.1", features = ["derive"] }
duplicate = "2.0.1"
floria = "=0.0.5"
kutil = { version = "=0.0.5", features = ["std", "immutable"] }
num-traits = "0.2.19"
read-url = { version = "=0.0.10", default-features = false, features = ["blocking"] }
rootcause = "0.11.0"
smart-default = "0.7.1"
thiserror = "2.0.17"
tracing = "0.1.44"
tynm = "0.2.0"
uuid = { version = "1.19.0", features = ["v4"] }

[features]
default = ["plugins", "filesystem", "http", "tosca-2_0"]
plugins = ["floria/plugins"]
filesystem = ["read-url/file"]
http = ["read-url/http"]
tosca-2_0 = []

# https://stackoverflow.com/a/61417700
[package.metadata.docs.rs]
all-features = true
features = ["read-url/async"]
rustdoc-args = ["--cfg", "docsrs"]
