[package]
edition = "2024"

name = "puccini-plugin-kubernetes"
description = "TOSCA"
version = "0.0.3"
rust-version = "1.91"

license = "MIT OR Apache-2.0"
repository = "https://github.com/tliron/puccini"

[dependencies]
duplicate = "2.0.1"
floria-plugin-sdk = "=0.0.5"
k8s-openapi = { version = "0.26.0", features = ["v1_34"] }
puccini-plugin-tosca-2_0 = "=0.0.4"
serde = "1.0.228"
struson = { version = "0.6.0", features = ["serde"] }

[lib]
crate-type = ["cdylib"]
