[package]
edition = "2024"

name = "puccini-plugin-kubernetes"
description = "TOSCA"
version = "0.0.3"
rust-version = "1.92"

license = "MIT OR Apache-2.0"
repository = "https://github.com/tliron/puccini"

[dependencies]
duplicate = "2.0.1"
floria-plugin-sdk = { version = "=0.0.5", features = ["serde"] }
k8s-openapi = { version = "0.26.1", features = ["v1_34"] } # https://docs.rs/crate/k8s-openapi/latest/features
puccini-plugin-sdk-tosca-2_0 = "=0.0.4"
serde = "1.0.228"
struson = { version = "0.6.0", features = ["serde"] }

[lib]
crate-type = ["cdylib"]
